--- a/DockableDialog/MainPage.xaml
+++ b/DockableDialog/MainPage.xaml
@@ -6,28 +6,29 @@
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         Title="Dockable Dialogs"  Height="500" Width="200"
         x:Name="DockableDialogs"  Background="LightGray" Loaded="DockableDialogs_Loaded">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
-           <RowDefinition></RowDefinition>
-      </Grid.RowDefinitions>
-        
-        <Grid.ColumnDefinitions>
-   
-        </Grid.ColumnDefinitions>
-        <Label Grid.Row="0">Log</Label>
-        <StackPanel Grid.Row="0">
-            <Button Name="btn_stats" Click="PaneInfoButton_Click">Tjo...</Button>
-            <Button Name="btn_wpf_stats" Click="wpf_stats_Click">Hej..</Button>
-            <Button Name="btn_getById" Click="btn_getById_Click">och...</Button>
-            <Button Name="btn_listTabs" Click="btn_listTabs_Click">Hopp...</Button>
-      </StackPanel>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"></RowDefinition>
+      <RowDefinition></RowDefinition>
+      <RowDefinition></RowDefinition>
+    </Grid.RowDefinitions>
 
-        <TextBox Name="tb_output" Grid.Row="1" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible"></TextBox>
-        <Label Content="Project Name:" Grid.Row="2" Height="28" HorizontalAlignment="Left" Name="lblProjectNameHeading" VerticalAlignment="Top" Margin="0,6,0,0" />
-        <Label Content="Label" Grid.Row="2" Height="26" HorizontalAlignment="Left" Margin="12,34,0,0" Name="lblProjectName" VerticalAlignment="Top" Width="176" />
-    </Grid>
+    <Grid.ColumnDefinitions>
+
+    </Grid.ColumnDefinitions>
+    <Label Grid.Row="0">Log</Label>
+    <StackPanel Grid.Row="0">
+      <Button Name="btn_stats" Click="PaneInfoButton_Click">Tjo...</Button>
+      <Button Name="btn_wpf_stats" Click="wpf_stats_Click">Hej..</Button>
+      <Button Name="btn_getById" Click="btn_getById_Click">och...</Button>
+      <Button Name="btn_listTabs" Click="btn_listTabs_Click">Hopp...</Button>
+    </StackPanel>
+
+    <WebBrowser Name="web_browser" Grid.Row="1"></WebBrowser>
+    <TextBox Name="tb_output" Grid.Row="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible"></TextBox>
+    <Label Content="Project Name:" Grid.Row="3" Height="28" HorizontalAlignment="Left" Name="lblProjectNameHeading" VerticalAlignment="Top" Margin="0,6,0,0" />
+    <Label Content="Label" Grid.Row="4" Height="26" HorizontalAlignment="Left" Margin="12,34,0,0" Name="lblProjectName" VerticalAlignment="Top" Width="176" />
+  </Grid>
 
 </Page>
 
